--- a/metadata.yaml
+++ b/metadata.yaml
@@ -27,5 +27,6 @@ subjects:
 - !lcc 'DC'
 - !lcsh 'France -- History -- Revolution, 1789-1799 -- Causes'
 - !lcsh 'France -- History -- Revolution, 1789-1799'
+- GITenberg
 title: The French Revolution
 url: http://www.gutenberg.org/ebooks/35215
